[package]
name = "feos_pets"
version = "0.1.0"
authors = ["Rolf Stierle <stierle@itt.uni-stuttgart.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
quantity = "0.5"
feos-core = { git = "https://github.com/feos-org/feos-core" }
feos-dft = { git = "https://github.com/feos-org/feos-dft", branch = "new_dft_struct" }
feos-pets = { path = "..", features = ["python"] }
pyo3 = { version = "0.16", features = ["extension-module", "abi3", "abi3-py37"] }
numpy = "0.16"
