[package]
name = "feos_pets"
version = "0.1.0"
authors = ["Rolf Stierle <stierle@itt.uni-stuttgart.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
quantity = "0.5"
feos-core = "0.2"
feos-dft = "0.2"
feos-pets = { path = "..", features = ["python"] }
pyo3 = { version = "0.16", features = ["extension-module", "abi3", "abi3-py37"] }
numpy = "0.16"
